# py-taxi-service-forms

./: .env.sample  .flake8  .gitattributes  .gitignore  4.2  README.md  checklist.md  conftest.py  copy.md  db.sqlite3  dump.json  et --hard 06154e5  manage.py  pyproject.toml  pytest.ini  requirements.txt  taxi.json  taxi_service_db_data.json
.github/workflows/: test.yml
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
static/css/: bootstrap.min.css  soft-design-system.css  soft-design-system.css.map  soft-design-system.min.css  styles.css
static/js/: close.js
static/taxi/: car_create_and_update.html
taxi/: admin.py  apps.py  expansion.py  form.py  forms.py  models.py  urls.py  validators.py  views.py
taxi/migrations/: 0001_initial.py  0002_alter_car_drivers.py  0002_alter_car_manufacturer.py  0002_alter_car_options_alter_driver_options.py  0002_alter_car_options_alter_driver_options_and_more.py  0002_alter_car_options_alter_manufacturer_options.py  0002_alter_car_options_alter_manufacturer_options_and_more.py  0002_alter_driver_groups_alter_driver_user_permissions.py  0002_customer.py  (+9 more)
taxi_service/: asgi.py  forms.py  settings.py  urls.py  views.py  wsgi.py
templates/: base.html  base_confirm_delete.html  base_delete.html  base_form.html  base_generic.html  car_confirm_delete.html  car_form.html  car_format_confirm_delete.html  confirm_delete.html  manufacturer_confirm_delete.html  manufacturer_form.html  manufacturer_format_confirm_delete.html
tests/: test_taxi.py  test_taxi_service_forms.py  test_taxi_service_home.py  test_taxi_view.py
(+338 files in other folders)
